--- a/app/src/main/res/layout/activity_add_recipie.xml
+++ b/app/src/main/res/layout/activity_add_recipie.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="30dp"
         tools:context=".ui.view.AddRecipieActivity">
 
 
@@ -89,9 +90,98 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/add_hint_time"
-                android:inputType="text" />
+                android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Ingredientes"
+            app:layout_constraintStart_toStartOf="@+id/boxTime"
+            app:layout_constraintTop_toBottomOf="@+id/boxTime" />
+
+        <LinearLayout
+            android:id="@+id/ingredientsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            app:layout_constraintTop_toBottomOf="@id/textView5">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_add_ingredients"
+                    style="@style/Button_Primary"
+                    android:layout_width="wrap_content"
+                    android:text="Add" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_delete_ingredient"
+                    style="@style/Button_Secondary"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="Delete" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Steps"
+            app:layout_constraintStart_toStartOf="@+id/boxTime"
+            app:layout_constraintTop_toBottomOf="@+id/ingredientsLayout" />
+
+        <LinearLayout
+            android:id="@+id/stepsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            app:layout_constraintTop_toBottomOf="@id/textView6">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_add_stpe"
+                    style="@style/Button_Primary"
+                    android:layout_width="wrap_content"
+                    android:text="Add" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_delete_step"
+                    style="@style/Button_Secondary"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="Delete" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_upload"
+            style="@style/Button_Primary"
+            android:layout_width="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="Subir receta"
+            app:layout_constraintTop_toBottomOf="@+id/stepsLayout" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
