--- a/app/src/main/res/layout/activity_add_recipie.xml
+++ b/app/src/main/res/layout/activity_add_recipie.xml
@@ -95,13 +95,40 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/txt_cat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="@+id/boxTime"
+            app:layout_constraintTop_toBottomOf="@+id/boxTime" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/box_cat"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintStart_toStartOf="@+id/boxTime"
+            app:layout_constraintTop_toBottomOf="@+id/txt_cat"
+            android:hint="Category">
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/dropdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Ingredientes"
             app:layout_constraintStart_toStartOf="@+id/boxTime"
-            app:layout_constraintTop_toBottomOf="@+id/boxTime" />
+            app:layout_constraintTop_toBottomOf="@+id/box_cat" />
 
         <LinearLayout
             android:id="@+id/ingredientsLayout"
@@ -171,7 +198,6 @@
 
             </LinearLayout>
         </LinearLayout>
-
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_upload"
