--- a/app/src/main/res/layout/recipie_item.xml
+++ b/app/src/main/res/layout/recipie_item.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="Recipie"
+            style="@style/Text_base"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -58,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Time in mins"
+            style="@style/Text_base"
             android:textSize="15sp"
             android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,6 +73,7 @@
             android:layout_height="wrap_content"
             android:text="Likes"
             android:textSize="15sp"
+            style="@style/Text_base"
             android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
