--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -30,7 +30,9 @@
                 android:id="@+id/cat_txt_wel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                style="@style/Text_base"
                 android:layout_marginStart="25dp"
                 app:layout_constraintBottom_toBottomOf="@+id/cat_usr_img"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +50,29 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:id="@+id/box_search_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cat_txt_wel">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="#E6E6E6"
+                    app:circularflow_radiusInDP="100dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView2">
+                app:layout_constraintTop_toBottomOf="@+id/box_search_input">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout"
@@ -116,7 +139,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:backgroundTint="#000000"
+                                android:background="#000000"
+                                android:src="@drawable/cat_2" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -158,7 +188,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:src="@drawable/cat_3" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -200,7 +235,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:src="@drawable/cat_4" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -242,7 +282,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:src="@drawable/cat_5" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -284,7 +329,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:src="@drawable/cat_6" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -325,7 +375,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/traditional_cat" />
+                                android:src="@drawable/cat_7" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#6F000000"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
