--- a/app/src/main/res/layout/fragment_recipies.xml
+++ b/app/src/main/res/layout/fragment_recipies.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Filtered by: "
+            style="@style/Text_base"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/recipies_recycler"
